--- a/Hackathon/Client/Hackathon.Client.csproj
+++ b/Hackathon/Client/Hackathon.Client.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Hackathon.Shared.csproj" />
+    <ProjectReference Include="..\Shared\Hackathon.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
