--- a/Hackathon/Hackathon.Persistence/Hackathon.Persistence.csproj
+++ b/Hackathon/Hackathon.Persistence/Hackathon.Persistence.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <SupportedPlatform Include="browser" />
+    <ProjectReference Include="..\Hackathon.Application\Hackathon.Application.csproj" />
   </ItemGroup>
+
 </Project>
