--- a/Hackathon/Server/appsettings.json
+++ b/Hackathon/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HackhathonDBConnection": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=Hackhathon;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
