--- a/Hackathon/Hackathon.Persistence/Hackathon.Persistence.csproj
+++ b/Hackathon/Hackathon.Persistence/Hackathon.Persistence.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Hackathon.Application\Hackathon.Application.csproj" />
   </ItemGroup>
 
