feat: upated event integration

--- a/Hackathon.Consumer/Hackathon.Consumer.csproj
+++ b/Hackathon.Consumer/Hackathon.Consumer.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hackathon.IntegrationEvents\Hackathon.IntegrationEvents.csproj" />
     <ProjectReference Include="..\Hackathon\Hackathon.Persistence\Hackathon.Persistence.csproj" />
   </ItemGroup>
 </Project>
