compose file and ajust queue

--- a/Hackathon.Consumer/appsettings.json
+++ b/Hackathon.Consumer/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "MassTransitSettings": {
-    "EndpointName": "Hackathon.Queue",
-    "Host": "amqp://hackathon-mq:5672",
+    "EndpointName": "Videos.Queue",
+    "Host": "amqp://videos-mq:5672",
     "Username": "guest",
     "Password": "guest"
   }
