--- a/Hackathon/Server/appsettings.json
+++ b/Hackathon/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HackhathonDBConnection": "User ID=postgres;Password=123456;Host=localhost;Port=5432;Database=Hackhathon;Pooling=true;"
+    "HackhathonDBConnection": "Host=localhost;Port=5432;Database=videos;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,8 +10,8 @@
   },
   "AllowedHosts": "*",
   "MassTransitSettings": {
-    "EndpointName": "videos.Queue",
-    "Host": "amqp://videos-mq:5672",
+    "EndpointName": "Videos.Queue",
+    "Host": "amqp://localhost:5672",
     "Username": "guest",
     "Password": "guest"
   }
