--- a/Hackathon/Server/appsettings.json
+++ b/Hackathon/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HackhathonDBConnection": "Host=localhost;Port=5432;Database=videos;Username=postgres;Password=postgres;"
+    "HackhathonDBConnection": "Host=videos.db;Port=5432;Database=videos;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "MassTransitSettings": {
     "EndpointName": "Videos.Queue",
-    "Host": "amqp://localhost:5672",
+    "Host": "amqp://videos-mq:5672",
     "Username": "guest",
     "Password": "guest"
   }
